# ajx-vector-math

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  clean.sh  compile.sh
include/: .vec2d.h.swp  constants.h  matrix2d.h  vec2d.h  vec3d.h
src/examples/: main.cpp
src/lib/: matrix2d.cpp  vec2d.cpp  vec3d.cpp
src/test/: test_constants_header.cpp  test_matrix2d.cpp  test_vec2d.cpp  test_vec3d.cpp
src/testing/: main.cpp
